# KTCPP

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  access.cpp  access_crtp.cpp  access_private.cpp  algorithm.cpp  array.hpp  complex.cpp  concat.cpp  ex17.txt  exersize15.1  falsesharing.cpp  fibonacci.cpp  filedesc.cpp  filedesc.hpp  gather.cpp  intpromotion.cpp  iterator.cpp  kt016-exercise3.cpp  kt016_ex1  kt016_ex2  power.cpp  queue_thread.cpp  sound.cpp  sqrtexcept.cpp  sqrtexpected.cpp  square.cpp  test.cpp  test_array.cpp  testxml.cpp  xmlnode.cpp  xmlnode.hpp
hello/: CMakeLists.txt  greet.cpp  greet.hpp  main.cpp
tests/: CMakeLists.txt  sqrtexcept_test.sh  testxml.cpp
